@@ -1,3 +1,4 @@
+- implemented 'sigspace' switch - in :ratchet mode only
 
 0.03  2006-05-20
 
